// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventCaption component renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFFFFF",
      "fontSize": 18,
      "paddingHorizontal": 12,
      "paddingVertical": 17,
    }
  }
>
  hola
</Text>
`;

exports[`EventCaption component renders correctly with complex caption with users and hashtags 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#FFFFFF",
      "fontSize": 18,
      "paddingHorizontal": 12,
      "paddingVertical": 17,
    }
  }
>
  hola 
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#7ED321",
      }
    }
  >
    @cpinto7
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#7ED321",
      }
    }
  >
    #wowow
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#7ED321",
      }
    }
  >
    #test_
  </Text>
   
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#7ED321",
      }
    }
  >
    @applicaster
  </Text>
   more stuff yeiah
</Text>
`;

exports[`EventCaption component renders correctly with no caption 1`] = `null`;

exports[`EventCaption component renders correctly with no caption text 1`] = `null`;
